--- a/app/.env.example
+++ b/app/.env.example
@@ -8,8 +8,10 @@ rd_host=redis_db
 # rd_database=0
 # rd_prefix=
 
-goip_password=
+goip_host=
 goip_port=44444
+goip_user=
+goip_password=
 # persist_msg=1
 
 admin_username=
