--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Lunar-Fox/dbl_goip-telegram#readme",
   "dependencies": {
+    "axios": "^1.4.0",
     "dotenv": "^10.0.0",
     "ioredis": "^4.27.6",
     "sha1": "^1.1.1",
