--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,11 @@ services:
     command: redis-server --include /usr/local/etc/redis/redis.conf
     volumes:
       - ./redis.conf:/usr/local/etc/redis/redis.conf
+      - ./redis_data:/data
   app:
     container_name: goip_bot
     build: app/
     restart: on-failure
-    ports: 
-      - 44444:44444/udp
+    network_mode: "host"
     depends_on:
       - redis_db
