--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     container_name: goip_bot
     build: app/
     restart: on-failure
-    network_mode: "host"
+    ports: 
+      - 44444:44444/udp
     depends_on:
       - redis_db
