--- a/app/dockerfile
+++ b/app/dockerfile
@@ -3,4 +3,4 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
 COPY . .
-CMD [ "node", "sms_server.js" ]
+CMD [ "node", "--insecure-http-parser", "sms_server.js" ]
